preparing testcontainers